--- a/style.css
+++ b/style.css
@@ -58,7 +58,21 @@ a {
     align-items: start;
 }
 
+.hero-main-text {
+    font-size: 48px;
+    color: #f9faf8;
+    margin-bottom: 12px;
+}
+
+.hero-sub-text {
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-bottom: 12px;
+}
+
 .hero .right-side {
     padding: 32px;
     color: #f9faf8;
 }   
+
+      
