--- a/style.css
+++ b/style.css
@@ -2,35 +2,33 @@ body {
   margin: 0;
   background: #eee;
   font-family: Roboto, sans-serif;
+  padding-left: 60px;
 }
 .header-hero {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    margin-bottom: 24px;
+    padding-bottom: 60px;
     background: #1f2937;
 }   
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 60px;
-    /* background: #1f2937; */
-    /* border-bottom: 1px solid #ddd; */
-    /* box-shadow: 0 0 8px rgba(0,0,0,.1); */
+    /* height: 60px; */
+    padding-left: 60px;
+    padding-right: 60px;
 }
 
 .header .logo {
     color: #f9faf8;
     font-size: 24px;
-    padding: 0 16px;
+    /* padding: 0 16px; */
 }
-
-.header .right-side {
+.header .links {
     display: flex;
     align-items: center;
     font-size: 18px;
-    /* color: #e5e7eb */
 }
 ul {
   display: flex;
@@ -39,7 +37,6 @@ ul {
   list-style-type: none;
   gap: 16px;
 }
-
 a {
   /* this removes the line under our links */
   text-decoration: none;
@@ -48,15 +45,25 @@ a {
 
 .hero {
     display: flex;
-    height: 500px;
+    justify-content: space-between;
+    padding-left: 60px;
+    margin-top: 32px;
+    /* align-items: stretch */
+    /* padding-right: 60px; */
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: auto;
+    gap: 60px;
 }
 
 .hero .left-side {
-    padding: 32px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
+    flex-wrap: wrap;
+    width: 500px
+    
 }
 
 .hero-main-text {
@@ -71,11 +78,8 @@ a {
     margin-bottom: 12px;
 }
 
-.hero .right-side {
-    padding: 32px;
-    color: #f9faf8;
-    height: 500px;
-    width: 200px;
+.img {
+    width: 500px;
 }   
 
       
