--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   background: #eee;
   font-family: Roboto, sans-serif;
-  padding-left: 60px;
 }
 .header-hero {
     display: flex;
@@ -15,7 +14,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* height: 60px; */
     padding-left: 60px;
     padding-right: 60px;
 }
@@ -23,7 +21,6 @@ body {
 .header .logo {
     color: #f9faf8;
     font-size: 24px;
-    /* padding: 0 16px; */
 }
 .header .links {
     display: flex;
@@ -72,7 +69,7 @@ a {
     margin-bottom: 12px;
 }
 
-.hero-sub-text {
+.hero-sub-text{
     font-size: 18px;
     color: #e5e7eb;
     margin-bottom: 12px;
@@ -81,5 +78,74 @@ a {
 .img {
     width: 500px;
 }   
+
+.info-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    text-align: center;
+    margin-top: 36px;
+    margin-bottom: 36px;
+}
+.info-row {
+    display: flex;
+    justify-content: center;
+    gap: 36px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+.img-box-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 12px;
+    font-size: 18px;
+    color: #f9faf8;
+    width: 175px;
+}   
+
+.image-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 6px solid #3882f6;
+    background-color: #3882f6;
+    border-radius: 18px;
+    aspect-ratio: 1 / 1;
+    width: 175px;
+}
+
+.image-box img {
+    width: 100%;
+    border-radius: 16px;
+}
+.image-text {
+    font-size: 18px;
+    color: #8d9298;
+    margin-bottom: 12px;
+    text-align: center;
+    width: 175px;
+}
+
+.quote-section { 
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+blockquote {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    margin: 60px 250px; 
+} 
+
+blockquote footer {
+    font-weight: 900;
+    margin-left: 350px;
+    margin-bottom: 60px;
+}
 
       
