--- a/style.css
+++ b/style.css
@@ -148,4 +148,30 @@ blockquote footer {
     margin-bottom: 60px;
 }
 
-      
+.call-to-action {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    padding: 24px;
+    border-radius: 12px;
+    margin-left: 200px;
+    margin-right: 200px;
+    background-color: #3882f6;
+    height: 150px;
+}   
+
+.action-text-1 {
+    font-size: 24px;
+    color: #f9faf8;
+    /* font-weight: 600; */
+    }
+.action-text-2 {
+    font-size: 18px;
+    color: #e5e7eb;
+    margin-top: 6px;
+}      
+.action-right {
+    /* width: 200px; */
+}
